# pythonEnvAnalyzer

./: .gitignore  build.sh  meson.build  meson_options.txt
debian/: changelog  control  rules
include/: venv_analyzer.h
include/ui/: main_window.h  package_list.h
resources/: resources.gresource.xml  venv-analyzer.desktop
resources/ui/: main.ui  package-details.ui  package-list.ui  styles.css
src/: main.c
src/core/: analyzer.c  analyzer.h  core_internal.h  package-private.h  package.c  package.h  types.h
src/db/: database.c  database.h  schema.sql
src/ui/: graph_view.c  graph_view.h  main_window.c  main_window.h  package_list.c  package_list.h
